Fully modularized for JPMS. Moved all tests to JUnit 5. Created a separate module for test classes still WIP.